feat: catalog pickers search server-side instead of capping the catalog
Replaces the reviewed-out 1000-row lookup caps with the real fix
(ADR-0100): the material and location pickers now fetch matching
entries on demand, exactly like the item and user pickers, so every
entry stays reachable by typing at any catalog size and no page embeds
the full catalog anymore.

- Backend: GET /api/v1/materials/search (visible-only, jobOrderOnly/
  rawOnly narrowing, refined material fetch-joined) and
  GET /api/v1/locations/search - paged, name-sorted, LIKE-escaped,
  deliberately uncached. The /lookup endpoints return the COMPLETE
  list again (caps reverted): a silent bound on a complete-list
  surface hides the tail, the defect class that already forced the
  item picker onto server-side search.
- Frontend relays /catalog/material-search + /catalog/location-search
  (25 rows/query, fail-soft, permitAll for the anonymous order form)
  and the krt-catalog-search.js remote-source registry
  (remote-materials[-joborder|-raw], remote-locations).
- Component: krtCombobox.setValue(value, label, data?) so programmatic
  fills work in remote mode; SCMDB import and refinery suggestion
  chips resolve entries via the search relay asynchronously; Umbuchen
  preselects pass the row's location AND user labels (fixes the admin
  Umbuchen user preset silently clearing since the remote-users
  conversion).
- Templates seed exactly one selected option for edit/redisplay
  states; the per-row full option lists and the inert options-template
  clones are gone.
- Refinery mission dropdown: explicit plannedStartTime,desc sort so
  the single fetched page holds the newest missions - without it the
  backend's ascending default would silently empty the three-month
  window beyond 1000 total missions (same silent-truncation class,
  found by the audit).
- Docs: ADR-0100 + registry entry, REQ-FE-016 rewritten (server-side
  search, no-silent-caps acceptance), CHANGELOG updated; MockMvc
  marker/no-dum