@@ -185,8 +185,10 @@ class InventoryPageControllerMvcTest {
         .andExpect(content().string(containsString("/js/inventory-herkunft.js")));
   }
 
-  // REQ-FE-016: the Umbuchen modal's target-location select opts into the searchable-combobox
-  // enhancement on both Lager views — the marker must sit on the (statically attributed) select.
+  // REQ-FE-016: the Umbuchen modal's target-location select is a server-side-search combobox
+  // (remote-locations) on both Lager views — the marker value must sit on the (statically
+  // attributed) select, which renders EMPTY (no preloaded catalog options; the modal-opening JS
+  // seeds the row's current location).
   @Test
   @WithMockUser(roles = "KRT_MEMBER")
   void viewMyInventory_umbuchenLocationPickerCarriesComboboxMarker() throws Exception {
@@ -201,7 +203,8 @@ class InventoryPageControllerMvcTest {
             content()
                 .string(
                     containsString(
-                        "id=\"umbuchenTargetLocationId\" class=\"w-full\" data-krt-combobox")));
+                        "id=\"umbuchenTargetLocationId\" class=\"w-full\""
+                            + " data-krt-combobox=\"remote-locations\"></select>")));
   }
 
   @Test
@@ -218,17 +221,25 @@ class InventoryPageControllerMvcTest {
             content()
                 .string(
                     containsString(
-                        "id=\"umbuchenTargetLocationId\" class=\"w-full\" data-krt-combobox")));
+                        "id=\"umbuchenTargetLocationId\" class=\"w-full\""
+                            + " data-krt-combobox=\"remote-locations\"></select>")));
   }
 
-  // REQ-FE-016: the Einbuchen form's material AND location selects carry the combobox marker —
-  // asserted in document order so each marker is pinned to its own select, not satisfied by the
-  // page's remote-users user picker.
+  // REQ-FE-016: the Einbuchen form's material AND location selects are server-side-search
+  // comboboxes (remote-materials / remote-locations) — the marker values are asserted in document
+  // order so each is pinned to its own select, not satisfied by the page's remote-users user
+  // picker. The full material catalog must no longer be dumped into the page: with no preselected
+  // form value only the placeholder renders, so a stubbed catalog material's name stays absent.
   @Test
   @WithMockUser(roles = "KRT_MEMBER")
   void viewInputPage_materialAndLocationPickersCarryComboboxMarker() throws Exception {
     when(backendApiClient.get(anyString(), anyTypeRef())).thenReturn(Collections.emptyList());
-    when(backendApiClient.getCached(any(CachedCatalog.class), anyTypeRef()))
+    when(backendApiClient.getCached(eq(CachedCatalog.MATERIALS_LOOKUP), anyTypeRef()))
+        .thenReturn(
+            List.of(
+                new MaterialReferenceDto(UUID.randomUUID(), "Quantanium", "SCU"),
+                new MaterialReferenceDto(UUID.randomUUID(), "Laranite", "SCU")));
+    when(backendApiClient.getCached(eq(CachedCatalog.LOCATIONS_LOOKUP), anyTypeRef()))
         .thenReturn(Collections.emptyList());
 
     mockMvc
@@ -240,32 +251,42 @@ class InventoryPageControllerMvcTest {
                 .string(
                     stringContainsInOrder(
                         "id=\"materialId\"",
-                        "data-krt-combobox",
+                        "data-krt-combobox=\"remote-materials\"",
                         "id=\"locationId\"",
-                        "data-krt-combobox")));
+                        "data-krt-combobox=\"remote-locations\"")))
+        .andExpect(content().string(not(containsString("Quantanium"))))
+        .andExpect(content().string(not(containsString("Laranite"))));
   }
 
-  // REQ-FE-016: the material drilldown's navigate select opts into the combobox enhancement (the
-  // change-delegation reads data-trigger/data-url-template off the enhancer's hidden input). The
-  // items fetch is stubbed as an empty page; the picker renders independently of the item list.
+  // REQ-FE-016: the material drilldown's navigate select is a server-side-search combobox
+  // (remote-materials); the change-delegation reads data-trigger/data-url-template off the
+  // enhancer's hidden input. Only the currently-viewed material is seeded as an <option> — the
+  // rest of the catalog is fetched on demand, so a second stubbed material's name stays absent.
   @Test
   @WithMockUser(roles = "KRT_MEMBER")
   void viewMaterialInventory_navigateSelectCarriesComboboxMarker() throws Exception {
+    UUID selectedMaterialId = UUID.randomUUID();
     PageResponse<InventoryItemDto> page =
         new PageResponse<>(List.of(), 0, 10, 0, 1, Collections.emptyList());
     when(backendApiClient.get(anyString(), anyTypeRef())).thenReturn(page);
-    when(backendApiClient.getCached(any(CachedCatalog.class), anyTypeRef()))
-        .thenReturn(Collections.emptyList());
+    when(backendApiClient.getCached(eq(CachedCatalog.MATERIALS_LOOKUP), anyTypeRef()))
+        .thenReturn(
+            List.of(
+                new MaterialReferenceDto(selectedMaterialId, "Quantanium", "SCU"),
+                new MaterialReferenceDto(UUID.randomUUID(), "Laranite", "SCU")));
 
     mockMvc
-        .perform(get("/inventory/material/" + UUID.randomUUID()))
+        .perform(get("/inventory/material/" + selectedMaterialId))
         .andExpect(status().isOk())
         .andExpect(view().name("inventory-material"))
         .andExpect(
             content()
                 .string(
                     containsString(
-                        "data-url-template=\"/inventory/material/{value}\" data-krt-combobox")));
+                        "data-url-template=\"/inventory/material/{value}\""
+                            + " data-krt-combobox=\"remote-materials\"")))
+        .andExpect(content().string(containsString("Quantanium")))
+        .andExpect(content().string(not(containsString("Laranite"))));
   }
 
   // covers REQ-INV-001 (SCU amount input) / REQ-INV-002 (PIECE amount input) — see
